k3s-manifest/mongo-restore-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: mongo-restore
  name: mongo-restore
spec:
  containers:
    - image: localhost:5000/wct-stats-mongo-restore
      name: mongo-restore
  restartPolicy: OnFailure
